--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,115 +10,163 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
         <h1 style="text-align: center;">Fair Trade Coffee</h1>
         <hr>
         <p style="text-align: center;">Prove the authenticity of coffee using the Ethereum blockchain.</p>
-    </div>
 
-    <div id="ftc-harvest">
-        <h2>Product Overview</h2>
-        <div class="form-group">
-            SKU
-            <br>
-            <input class="input-field" type="number" id="sku" name="sku" value=1><br>
-            UPC
-            <br>
-            <input type="number" id="upc" name="upc" value=1><br>
-            Current Owner ID
-            <br>
-            <input type="text" id="ownerID" name="ownerID" value="" size="50"><br>
-            <div class=button-div>
-                <button class="btn-fetchOne" id="button" type="button" data-id="9">Fetch Data 1</button>
-                <button class="btn-fetchTwo" id="button" type="button" data-id="10">Fetch Data 2</button>
+        <div class="tab">
+            <button class="tablinks" onclick="javascript:openTab(event, 'rbac-setup')" id="defaultOpen">RBAC Setup</button>
+            <button class="tablinks" onclick="javascript:openTab(event, 'farm-details')">Farm Details</button>
+            <button class="tablinks" onclick="javascript:openTab(event, 'product-details')">Product Details</button>
+            <button class="tablinks" onclick="javascript:openTab(event, 'product-overview')">Product Overview</button>            
+            <button class="tablinks" onclick="javascript:openTab(event, 'transaction-history')">Transaction History</button>
+        </div>
+    
+        <div id="rbac-setup" class="tabcontent">
+            <div class="form-group">
+                Owner ID: <br>
+                <input class="input-field" type="text" id="rbac-ownerID" name="rbac-ownerID" value=''><br>
+                Farmer ID:<br>
+                <input class="input-field" type="text" id="rbac-farmerID" name="rbac-farmerID" value=''><br>
+                Distributor ID: <br>
+                <input class="input-field" type="text" id="rbac-distributorID" name="rbac-distributorID" value="" size="50"><br>
+                Retailer ID: <br>
+                <input class="input-field" type="text" id="rbac-retailerID" name="rbac-retailerID" value="" size="50"><br>
+                Customer ID: <br>
+                <input class="input-field" type="text" id="rbac-customerID" name="rbac-customerID" value="" size="50"><br>                                
+                <div class=button-div>
+                    <button class="btn-setup" id="rbac-setup" type="button" data-id="11">Setup</button>
+                </div>
+                <br>
+                <label id='rbac-result' name='rbac-result'></label><br>
+            </div>            
+        </div> 
+        <div id="product-overview" class="tabcontent">
+            <div class="form-group">
+                <br>
+                SKU
+                <br>
+                <input class="input-field" type="number" id="sku" name="sku" value=1><br><br>
+                UPC
+                <br>
+                <input type="number" id="upc" name="upc" value=1><br><br>
+                Current Owner ID
+                <br>
+                <input type="text" id="ownerID" name="ownerID" value="" size="50"><br><br>
+                <div class=button-div>
+                    <button class="btn-fetchOne" id="button" type="button" data-id="9">Fetch Data 1</button>
+                    <button class="btn-fetchTwo" id="button" type="button" data-id="10">Fetch Data 2</button>
+                </div>
+                <br>
+                SKU:
+                <label id='itemSKULabel' name='itemSKULabel'></label><br><br>
+                UPC:
+                <label id='itemUPCLabel'></label><br><br>
+                Owner ID:
+                <label id='ownerIDLabel'></label><br><br>
+                Farmer ID:
+                <label id='farmerIDLabel'></label><br><br>
+                <hr>
+                Product ID:
+                <label id='productIDLabel'></label><br><br>
+                Product Price:
+                <label id='productPriceLabel'></label><br><br>
+                Item State:
+                <label id='itemStateLabel'></label><br><br>
+            </div>   
+        </div> 
+        <div id="farm-details" class="tabcontent">
+            <div class="form-group">
+                Farmer ID
+                <br>
+                <input type="text" id="originFarmerID" name="originFarmerID" value=""
+                    size="50"><br>
+                Farm Name
+                <br>
+                <input type="text" id="originFarmName" name="originFarmName" value="John Doe"><br>
+                Farm Information
+                <br>
+                <input type="text" id="originFarmInformation" name="originFarmInformation" value="Yarra Valley"><br>
+                Farm Latitude
+                <br>
+                <input type="text" id="originFarmLatitude" name="originFarmLatitude" value="-38.239770"><br>
+                Farm Longitude
+                <br>
+                <input type="text" id="originFarmLongitude" name="originFarmLongitude" value="144.341490"><br>
+                <br>
+                <button class="btn-harvest" id="button" type="button" data-id="1">Harvest</button>
+                <button class="btn-process" id="button" type="button" data-id="2">Process</button>
+                <button class="btn-pack" id="button" type="button" data-id="3">Pack</button>
+                <button class="btn-forsale" id="button" type="button" data-id="4">ForSale</button>
             </div>
-            SKU:
-            <label id='itemSKULabel' name='itemSKULabel'></label><br>
-            UPC:
-            <label id='itemUPCLabel'></label><br>
-            Owner ID:
-            <label id='ownerIDLabel'></label><br>
-            Farmer ID:
-            <label id='farmerIDLabel'></label><br>
-            <hr>
-            Product ID:
-            <label id='productIDLabel'></label><br>
-            Product Price:
-            <label id='productPriceLabel'></label><br>
-            Item State:
-            <label id='itemStateLabel'></label><br>
-        </div>
-
-        <div class=form-break></div>
-        <h2>Farm Details</h2>
-        <div class="form-group">
-            Farmer ID
-            <br>
-            <input type="text" id="originFarmerID" name="originFarmerID" value=""
-                size="50"><br>
-            Farm Name
-            <br>
-            <input type="text" id="originFarmName" name="originFarmName" value="John Doe"><br>
-            Farm Information
-            <br>
-            <input type="text" id="originFarmInformation" name="originFarmInformation" value="Yarra Valley"><br>
-            Farm Latitude
-            <br>
-            <input type="text" id="originFarmLatitude" name="originFarmLatitude" value="-38.239770"><br>
-            Farm Longitude
-            <br>
-            <input type="text" id="originFarmLongitude" name="originFarmLongitude" value="144.341490"><br>
-            <br>
-            <button class="btn-harvest" id="button" type="button" data-id="1">Harvest</button>
-            <button class="btn-process" id="button" type="button" data-id="2">Process</button>
-            <button class="btn-pack" id="button" type="button" data-id="3">Pack</button>
-            <button class="btn-forsale" id="button" type="button" data-id="4">ForSale</button>
-        </div>
-        <div class=form-break></div>
-        <h2>Product Details</h2>
-        <div class="form-group">
-            Product Notes
-            <br>
-            <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
-            Product Price
-            <br>
-            <input type="number" id="productPrice" name="productPrice" value=1>GWEI<br>
-            Distributor ID
-            <br>
-            <input type="text" id="distributorID" name="distributorID" value=""
-                size="50">
-            <br>
-            Retailer ID
-            <br>
-            <input type="text" id="retailerID" name="retailerID" value=""
-                size="50"><br>
-            Consumer ID
-            <br>
-            <input type="text" id="consumerID" name="consumerID" value=""
-                size="50"><br>
-            <br>
-            <button class="btn-buy" id="button" type="button" data-id="5">Buy</button>
-            <button class="btn-ship" id="button" type="button" data-id="6">Ship</button>
-            <button class="btn-receive" id="button" type="button" data-id="7">Receive</button>
-            <button class="btn-purchase" id="button" type="button" data-id="8">Purchase</button>
-        </div>
-        <div class=form-break></div>
-        <hr>
-    </div>
-
-    <h2>Transaction History<span id="ftc-history"></span></h2>
-    <div>
-        <ul id="ftc-events">
-            <!-- Events will appear here from app.js -->
-        </ul>
-        <br>
-        <hr>
-    </div>
+        </div> 
+        <div id="product-details" class="tabcontent">
+            <div class="form-group">
+                Product Notes
+                <br>
+                <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
+                Product Price
+                <br>
+                <input type="number" id="productPrice" name="productPrice" value=1>&ensp;&ensp;Ether<br>
+                Distributor ID
+                <br>
+                <input type="text" id="distributorID" name="distributorID" value=""
+                    size="50">
+                <br>
+                Retailer ID
+                <br>
+                <input type="text" id="retailerID" name="retailerID" value=""
+                    size="50"><br>
+                Consumer ID
+                <br>
+                <input type="text" id="consumerID" name="consumerID" value=""
+                    size="50"><br>
+                <br>
+                <button class="btn-buy" id="button" type="button" data-id="5">Buy</button>
+                <button class="btn-ship" id="button" type="button" data-id="6">Ship</button>
+                <button class="btn-receive" id="button" type="button" data-id="7">Receive</button>
+                <button class="btn-purchase" id="button" type="button" data-id="8">Purchase</button>
+            </div>
+        </div> 
+        <div id="transaction-history" class="tabcontent">
+            <div>
+                <ul id="ftc-events">
+                    <!-- Events will appear here from app.js -->
+                </ul>
+                <br>
+                <div class=button-div>
+                    <button class="btn-setup" id="history-farmer" type="button" onclick="javascript:openTab(event, 'farm-details')">To Farmer Details</button>
+                    <button class="btn-setup" id="history-product" type="button" onclick="javascript:openTab(event, 'product-details')">To Product Details</button>
+                </div>                
+            </div> 
+        </div>        
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- <script src="js/web3.min.js"></script> -->
     <!-- <script src="js/truffle-contract.js"></script> -->
     <script src="index.js"></script>
+
+    <script>
+        function openTab(evt, cityName) {
+          var i, tabcontent, tablinks;
+          tabcontent = document.getElementsByClassName("tabcontent");
+          for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+          }
+          tablinks = document.getElementsByClassName("tablinks");
+          for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+          }
+          document.getElementById(cityName).style.display = "block";
+          if(evt.currentTarget && evt.currentTarget.className) {
+              evt.currentTarget.className += " active";
+          }
+        }
+        
+        // Get the element with id="defaultOpen" and click on it
+        document.getElementById("defaultOpen").click();
+        </script>
 </body>
 
 </html>
